test/NameLookup/member_type_shadowing.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/MemberTypesInClasses.code
// RUN: %target-language-frontend -typecheck %s -I %t -verify

import MemberTypesInClasses

protocol P {
  associatedtype Member
}

extension RootClass: P {
  typealias Member = SubClass.Member
}

class A {
  enum Reusable {
    case option1
    case option2
  }
}

class B: A {
  enum Reusable {
    case option1 // expected-note {{'option1' declared here}}
  }

  fn process() {
    _ = B.Reusable.option1
    _ = B.Reusable.option2 // expected-error {{type 'B.Reusable' has no member 'option2'; did you mean 'option1'?}}
  }
}

protocol Q {
  typealias A = Int
}

struct S : Q {
  typealias A = String
}

fn usesA(_: S.A) {} // should resolve to the typealias inside S

fn callsA() {
  usesA("hello")
}
